Tests UserService et UserController OK
